--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
       <div class="mosque-icon">🕌</div>
       <p class="hero-label">Masjid As Sakinah Pantai Mentari</p>
       <h1 class="hero-title"><span class="arabic">رَمَضَان كَرِيم</span></h1>
-      <h2 class="hero-subtitle">Kajian Ramadhan 1447 H / 2026 M</h2>
-      <p class="hero-desc">Kajian ilmiah bersama para ustadz pilihan.<br>Raih keberkahan setiap hari di bulan suci.</p>
-
+      <h2 class="hero-subtitle">Kajian Subuh Spesial Ramadhan 1447 H / 2026 M</h2>
     </div>
     <div class="crescent-deco"></div>
   </header>
