Update alamat lokasi masjid

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <span class="info-emoji">📍</span>
           <div>
             <strong>Lokasi</strong>
-            <p>Pantai Mentari, Surabaya, Jawa Timur</p>
+            <p>Pantai Mentari blok A-13, Kenjeran, Bulak, Surabaya 60123</p>
           </div>
         </div>
         <div class="info-item">
