Update Info tab: WA Centre, Instagram, Threads

--- a/index.html
+++ b/index.html
@@ -128,17 +128,27 @@
           </div>
         </div>
         <div class="info-item">
-          <span class="info-emoji">🕐</span>
+          <span class="info-emoji">📱</span>
           <div>
-            <strong>Waktu</strong>
-            <p>Kajian Subuh, Tarawih & Kultum Shubuh</p>
+            <strong>WA Centre</strong>
+            <p><a href="https://wa.me/6289529788057" target="_blank"
+                style="color:var(--teal-light);text-decoration:none;">089529788057</a></p>
           </div>
         </div>
         <div class="info-item">
-          <span class="info-emoji">📺</span>
+          <span class="info-emoji">📸</span>
           <div>
-            <strong>Live Streaming</strong>
-            <p>YouTube Channel resmi masjid</p>
+            <strong>Instagram</strong>
+            <p><a href="https://instagram.com/assakinah.pantaimentari" target="_blank"
+                style="color:var(--teal-light);text-decoration:none;">@assakinah.pantaimentari</a></p>
+          </div>
+        </div>
+        <div class="info-item">
+          <span class="info-emoji">🧵</span>
+          <div>
+            <strong>Threads</strong>
+            <p><a href="https://threads.net/@assakinah.pantaimentari" target="_blank"
+                style="color:var(--teal-light);text-decoration:none;">@assakinah.pantaimentari</a></p>
           </div>
         </div>
       </div>
