Add rekening donasi BSI to Info tab

--- a/index.html
+++ b/index.html
@@ -164,9 +164,18 @@
                 style="color:var(--teal-light);text-decoration:none;">@assakinah.pantaimentari</a></p>
           </div>
         </div>
+        <div class="info-item"
+          style="border-color:rgba(212,175,55,0.4);background:linear-gradient(135deg,rgba(13,92,99,0.3),rgba(26,37,53,1));">
+          <span class="info-emoji">💳</span>
+          <div>
+            <strong style="color:var(--gold);">Rekening Donasi</strong>
+            <p style="color:var(--text);font-weight:600;font-size:0.85rem;margin:2px 0;">BSI · 711 899 899 7</p>
+            <p style="font-size:0.75rem;color:var(--text-muted);">a.n Masjid As Sakinah Pantai Mentari</p>
+          </div>
+        </div>
       </div>
 
-      <a href="https://www.youtube.com/@masjidassakinahpantaimentar2693" target="_blank" class="btn-social youtube">
+      <a href="https://www.youtube.com/@masjidassakinahpm" target="_blank" class="btn-social youtube">
         <span>▶</span> YouTube Channel
       </a>
       <a href="https://maps.google.com/?q=Masjid+As+Sakinah+Pantai+Mentari+Surabaya" target="_blank"
