Replace hero text with kajianheader.jpg

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
     <div class="hero-content">
 
       <p class="hero-label">Masjid As Sakinah Pantai Mentari</p>
-      <h1 class="hero-title"><span class="arabic">رَمَضَان كَرِيم</span></h1>
-      <h2 class="hero-subtitle">Kajian Subuh Spesial Ramadhan 1447 H / 2026 M</h2>
+      <img src="assets/foto/kajianheader.jpg" alt="Kajian Ramadhan Header" class="hero-header-img">
     </div>
     <div class="crescent-deco"></div>
   </header>
