Implement inline video player for Kajian

--- a/index.html
+++ b/index.html
@@ -208,6 +208,8 @@
       <h2 class="modal-title" id="modalTitle">Judul Kajian</h2>
       <p class="modal-meta" id="modalMeta">Ustadz • Tanggal</p>
       <div class="modal-divider"></div>
+      <div id="modalVideo" class="video-responsive"
+        style="display:none; margin-bottom:16px; border-radius:12px; overflow:hidden;"></div>
       <div class="modal-body" id="modalBody">
         <!-- summary content -->
       </div>
