Update hero text and remove playlist header

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
       <p class="hero-label">Masjid As Sakinah Pantai Mentari</p>
       <img src="assets/foto/kajianheader.jpg" alt="Kajian Ramadhan Header" class="hero-header-img">
+      <p
+        style="font-weight:700;color:var(--text);font-size:0.82rem;margin-top:8px;line-height:1.4;text-shadow:0 1px 4px rgba(0,0,0,0.8);">
+        Raih Pahala Majelis Ilmu dan Kesempatan Mendapatkan Hadiah Umroh!
+      </p>
     </div>
     <div class="crescent-deco"></div>
   </header>
@@ -53,10 +57,7 @@
 
     <!-- TAB: PLAYLIST -->
     <section id="tab-playlist" class="tab-section active">
-      <div class="section-header">
-        <h2>🎬 Playlist YouTube</h2>
-        <p>Tonton semua kajian Ramadhan dari channel resmi masjid</p>
-      </div>
+
 
       <!-- Featured Video -->
       <div class="featured-video-wrap">
