feat: tambah splash screen mobile menggunakan splash.jpg

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
 
 <body>
 
+  <!-- ===== SPLASH SCREEN (mobile only) ===== -->
+  <div id="splashScreen" class="splash-screen">
+    <img src="assets/foto/splash.jpg" alt="Splash Ramadhan" class="splash-img" />
+    <div class="splash-overlay"></div>
+    <div class="splash-content">
+      <p class="splash-sub">Selamat Datang di</p>
+      <h1 class="splash-title">Kajian Ramadhan</h1>
+      <p class="splash-masjid">Masjid As Sakinah Pantai Mentari</p>
+      <div class="splash-loader">
+        <div class="splash-loader-bar"></div>
+      </div>
+    </div>
+  </div>
+
   <!-- ===== HERO ===== -->
   <header class="hero">
     <div class="hero-overlay"></div>
