fix: update teks judul splash screen

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="splash-overlay"></div>
     <div class="splash-content">
       <p class="splash-sub">Selamat Datang di</p>
-      <h1 class="splash-title">Kajian Ramadhan</h1>
+      <h1 class="splash-title">Kajian Spesial Ramadhan 1447 H</h1>
       <p class="splash-masjid">Masjid As Sakinah Pantai Mentari</p>
       <div class="splash-loader">
         <div class="splash-loader-bar"></div>
