feat: tambah foto QRIS dan ajakan donasi di tab Info Masjid

--- a/index.html
+++ b/index.html
@@ -189,6 +189,17 @@
         </div>
       </div>
 
+      <!-- QRIS Donasi -->
+      <div class="qris-section">
+        <p class="qris-tagline">💚 Dukung Dakwah &amp; Kemakmuran Masjid</p>
+        <p class="qris-sub">Scan QRIS di bawah untuk berdonasi. Setiap rupiah Anda adalah amal jariyah yang mengalir.
+        </p>
+        <div class="qris-wrap">
+          <img src="assets/foto/qris.jpg" alt="QRIS Donasi Masjid As Sakinah" class="qris-img" />
+        </div>
+        <p class="qris-note">QRIS · BSI · 711 899 899 7 · a.n Masjid As Sakinah Pantai Mentari</p>
+      </div>
+
       <a href="https://www.youtube.com/@masjidassakinahpm" target="_blank" class="btn-social youtube">
         <span>▶</span> YouTube Channel
       </a>
