--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero-content">
 
       <p class="hero-label">Masjid As Sakinah Pantai Mentari</p>
-      <img src="assets/foto/kajianheader.jpg" alt="Kajian Ramadhan Header" class="hero-header-img">
+      <img src="assets/foto/kajianheader.png" alt="Kajian Ramadhan Header" class="hero-header-img">
       <p
         style="font-weight:700;color:var(--text);font-size:0.82rem;margin-top:8px;line-height:1.4;text-shadow:0 1px 4px rgba(0,0,0,0.8);">
         Raih Pahala Majelis Ilmu dan Kesempatan Mendapatkan Hadiah Umroh!
@@ -132,11 +132,9 @@
         <p>Masjid As Sakinah Pantai Mentari Surabaya</p>
       </div>
 
-      <div class="info-card">
-        <div class="info-icon">🕌</div>
-        <h3>Masjid As Sakinah</h3>
-        <p>Masjid As Sakinah terletak di kawasan Pantai Mentari, Surabaya. Aktif menyelenggarakan kajian rutin dan
-          program Ramadhan setiap tahun.</p>
+      <div class="info-card" style="padding:0;overflow:hidden;">
+        <img src="assets/foto/headermasjid.jpg" alt="Masjid As Sakinah Pantai Mentari"
+          style="width:100%;display:block;border-radius:16px;" />
       </div>
 
       <div class="info-grid">
