ui: ganti label Kajian jadi Resume, hapus tombol Kunjungi YouTube

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <!-- ===== NAV TABS (sticky) ===== -->
   <nav class="tab-nav" id="tabNav">
     <button class="tab-btn active" data-tab="playlist" onclick="switchTab('playlist')">📺 Playlist</button>
-    <button class="tab-btn" data-tab="kajian" onclick="switchTab('kajian')">📖 Kajian</button>
+    <button class="tab-btn" data-tab="kajian" onclick="switchTab('kajian')">📖 Resume</button>
     <button class="tab-btn" data-tab="info" onclick="switchTab('info')">🕌 Info</button>
   </nav>
 
@@ -84,9 +84,6 @@
             allowfullscreen>
           </iframe>
         </div>
-        <a href="https://www.youtube.com/@masjidassakinahpantaimentar2693" target="_blank" class="yt-channel-btn">
-          <span class="yt-icon">▶</span> Kunjungi Channel YouTube
-        </a>
       </div>
 
       <!-- Playlist Grid -->
@@ -264,7 +261,7 @@
     </button>
     <button class="bnav-btn" onclick="switchTab('kajian')" id="bnav-kajian">
       <span class="bnav-icon">📖</span>
-      <span>Kajian</span>
+      <span>Resume</span>
     </button>
     <button class="bnav-btn" onclick="switchTab('info')" id="bnav-info">
       <span class="bnav-icon">🕌</span>
