Info Masjid: QRIS naik ke atas, hapus Kajian Ramadhan, Threads ganti Website

--- a/index.html
+++ b/index.html
@@ -134,19 +134,23 @@
           style="width:100%;display:block;border-radius:16px;" />
       </div>
 
+      <!-- QRIS Donasi -->
+      <div class="qris-section">
+        <p class="qris-tagline">💚 Dukung Dakwah &amp; Kemakmuran Masjid</p>
+        <p class="qris-sub">Scan QRIS di bawah untuk berdonasi. Setiap rupiah Anda adalah amal jariyah yang mengalir.
+        </p>
+        <div class="qris-wrap">
+          <img src="assets/foto/qris.jpg" alt="QRIS Donasi Masjid As Sakinah" class="qris-img" />
+        </div>
+        <p class="qris-note">QRIS · BSI · 711 899 899 7 · a.n Masjid As Sakinah Pantai Mentari</p>
+      </div>
+
       <div class="info-grid">
         <div class="info-item">
           <span class="info-emoji">📍</span>
           <div>
             <strong>Lokasi</strong>
             <p>Pantai Mentari blok A-13, Kenjeran, Bulak, Surabaya 60123</p>
-          </div>
-        </div>
-        <div class="info-item">
-          <span class="info-emoji">📅</span>
-          <div>
-            <strong>Kajian Ramadhan</strong>
-            <p>Setiap hari selama bulan Ramadhan 1447 H</p>
           </div>
         </div>
         <div class="info-item">
@@ -166,11 +170,11 @@
           </div>
         </div>
         <div class="info-item">
-          <span class="info-emoji">🧵</span>
+          <span class="info-emoji">🌐</span>
           <div>
-            <strong>Threads</strong>
-            <p><a href="https://threads.net/@assakinah.pantaimentari" target="_blank"
-                style="color:var(--teal-light);text-decoration:none;">@assakinah.pantaimentari</a></p>
+            <strong>Website</strong>
+            <p><a href="https://www.assakinahpantaimentari.org" target="_blank"
+                style="color:var(--teal-light);text-decoration:none;">www.assakinahpantaimentari.org</a></p>
           </div>
         </div>
         <div class="info-item"
@@ -182,17 +186,6 @@
             <p style="font-size:0.75rem;color:var(--text-muted);">a.n Masjid As Sakinah Pantai Mentari</p>
           </div>
         </div>
-      </div>
-
-      <!-- QRIS Donasi -->
-      <div class="qris-section">
-        <p class="qris-tagline">💚 Dukung Dakwah &amp; Kemakmuran Masjid</p>
-        <p class="qris-sub">Scan QRIS di bawah untuk berdonasi. Setiap rupiah Anda adalah amal jariyah yang mengalir.
-        </p>
-        <div class="qris-wrap">
-          <img src="assets/foto/qris.jpg" alt="QRIS Donasi Masjid As Sakinah" class="qris-img" />
-        </div>
-        <p class="qris-note">QRIS · BSI · 711 899 899 7 · a.n Masjid As Sakinah Pantai Mentari</p>
       </div>
 
       <a href="https://www.youtube.com/@masjidassakinahpm" target="_blank" class="btn-social youtube">
