Optimize SEO (meta tags, robots, sitemap) and add Google Analytics placeholder

--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-  <title>Kajian Ramadhan | Masjid As Sakinah Pantai Mentari</title>
+
+  <!-- Google Search Console & Analytics (Placeholder) -->
+  <!-- AntiGravity: Replace G-XXXXXXXXXX with your real Measurement ID -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
+
+  <title>Kajian Ramadhan | Masjid As Sakinah Pantai Mentari Surabaya</title>
+
+  <!-- SEO Meta Tags -->
   <meta name="description"
-    content="Playlist kajian Ramadhan lengkap dari Masjid As Sakinah Pantai Mentari Surabaya. Saksikan video, baca ringkasan, dan lihat infografis setiap kajian." />
+    content="Playlist kajian Ramadhan lengkap dan eksklusif dari Masjid As Sakinah Pantai Mentari Surabaya. Saksikan video, pelajari ringkasan materi (resume), and akses infografis bermanfaat setiap harinya." />
+  <meta name="keywords"
+    content="Kajian Ramadhan, Masjid As Sakinah, Pantai Mentari, Surabaya, Kajian Subuh, Fiqih, Tafsir, Akidah, Akhlak, Islam, Ramadhan 1447 H" />
+  <meta name="author" content="Masjid As Sakinah Pantai Mentari" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://media.assakinahpantaimentari.org/" />
+
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://media.assakinahpantaimentari.org/" />
+  <meta property="og:title" content="Kajian Ramadhan | Masjid As Sakinah Pantai Mentari" />
+  <meta property="og:description"
+    content="Saksikan playlist kajian Ramadhan, resume materi, dan infografis eksklusif dari Masjid As Sakinah Surabaya." />
+  <meta property="og:image" content="https://media.assakinahpantaimentari.org/assets/foto/hero.jpg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://media.assakinahpantaimentari.org/" />
+  <meta property="twitter:title" content="Kajian Ramadhan | Masjid As Sakinah Pantai Mentari" />
+  <meta property="twitter:description"
+    content="Saksikan playlist kajian Ramadhan, resume materi, dan infografis eksklusif dari Masjid As Sakinah Surabaya." />
+  <meta property="twitter:image" content="https://media.assakinahpantaimentari.org/assets/foto/hero.jpg" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
