--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
   <!-- Google Search Console & Analytics (Placeholder) -->
   <!-- AntiGravity: Replace G-XXXXXXXXXX with your real Measurement ID -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DR2TYY7TT9"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-    gtag('config', 'G-XXXXXXXXXX');
+    gtag('config', 'G-DR2TYY7TT9');
   </script>
 
   <title>Kajian Ramadhan | Masjid As Sakinah Pantai Mentari Surabaya</title>
