Update SEO keywords: include all speaker names from kajian.json

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="description"
     content="Playlist kajian Ramadhan lengkap dan eksklusif dari Masjid As Sakinah Pantai Mentari Surabaya. Saksikan video, pelajari ringkasan materi (resume), and akses infografis bermanfaat setiap harinya." />
   <meta name="keywords"
-    content="Kajian Ramadhan, Masjid As Sakinah, Pantai Mentari, Surabaya, Kajian Subuh, Fiqih, Tafsir, Akidah, Akhlak, Islam, Ramadhan 1447 H" />
+    content="Kajian Ramadhan, Masjid As Sakinah, Pantai Mentari, Surabaya, Kajian Subuh, Fiqih, Tafsir, Akidah, Akhlak, Islam, Ramadhan 1447 H, Dr. KH. Khozin Mustafid, Dr. KH. M. Syukron Djazilan, Dr. Muhammad Yahya, Drs. H. Muhammad Taufiq AB, Habib Hasan bin Faruq Alkaff, Habib Musthofa Jamal bin Ridho Alaydrus, KH. Ahmad Mujab Muthohar, KH. Ma'ruf Khozin, Letkol Laut H. Enjang Juaeni Zein, Prof. Dr. H. Moh. Ali Aziz, Prof. Dr. H. Saiful Jazil, Prof. Dr. Ir. Annis Catur Adi, Prof. Dr. Menachem Ali, Ustad Anwar Musyaddat, Ustad Ardhyansah, Ustad H. Agung Cahyadi, Ustad H. M. Ikrom Rijal, Ustad H. M. Junaidi Sahal, Ustad H. M. Shaleh Drehem, Ustad M. Ali Misbahul Munir, Ustad Marzuki Imron" />
   <meta name="author" content="Masjid As Sakinah Pantai Mentari" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://media.assakinahpantaimentari.org/" />
