Add footer credit with WA link

--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@
   <button class="fab-top" id="fabTop" onclick="window.scrollTo({top:0,behavior:'smooth'})"
     title="Kembali ke atas">☝</button>
 
+  <footer class="main-footer">
+    <p>&copy; 2026 Masjid As Sakinah Pantai Mentari Surabaya</p>
+    <p>Developed by : <a href="https://wa.me/6289529788057" target="_blank">madia@assakinah</a></p>
+  </footer>
+
   <script src="script.js"></script>
 </body>
 
