Update Kajian Hari ke-6, speaker photos, and minor cleanup in index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     </section>
 
     <!-- TAB: KAJIAN LIST -->
-    <section id="tab-kajian" class="tab-section" id="kajian">
+    <section id="tab-kajian" class="tab-section">
       <div class="section-header">
         <h2>📖 Daftar Kajian</h2>
         <p>Ringkasan & infografis setiap sesi kajian Ramadhan</p>
