Fix prayer schedule accuracy and modernize footer

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <div class="waktu-item"><span>Maghrib</span><strong id="wMaghrib">–</strong></div>
           <div class="waktu-item"><span>Isya</span><strong id="wIsya">–</strong></div>
         </div>
-        <p class="waktu-note">* Jadwal waktu sholat Kota Surabaya</p>
+        <p class="waktu-note" id="lokasiWaktu">* Jadwal waktu sholat Kota Surabaya</p>
       </div>
     </section>
 
@@ -290,8 +290,13 @@
     title="Kembali ke atas">☝</button>
 
   <footer class="main-footer">
-    <p>&copy; 2026 Masjid As Sakinah Pantai Mentari Surabaya</p>
-    <p>Developed by : <a href="https://wa.me/6289529788057" target="_blank">madia@assakinah</a></p>
+    <div class="footer-content">
+      <p class="copyright">&copy; 2026 Masjid As Sakinah Pantai Mentari Surabaya</p>
+      <div class="developer-info">
+        <span>Developed by</span>
+        <a href="https://wa.me/6289529788057" target="_blank" class="dev-link">madia@assakinah</a>
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
