Switch prayer schedule to Kemenag RI source

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
           <div class="waktu-item"><span>Maghrib</span><strong id="wMaghrib">–</strong></div>
           <div class="waktu-item"><span>Isya</span><strong id="wIsya">–</strong></div>
         </div>
-        <p class="waktu-note" id="lokasiWaktu">* Jadwal waktu sholat Kota Surabaya</p>
+        <p class="waktu-note" id="lokasiWaktu">* Jadwal waktu sholat Kota Surabaya &bull; Sumber: Kemenag RI</p>
       </div>
     </section>
 
