Update developer credit in footer

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <p class="copyright">&copy; 2026 Masjid As Sakinah Pantai Mentari Surabaya</p>
       <div class="developer-info">
         <span>Developed by</span>
-        <a href="https://wa.me/6289529788057" target="_blank" class="dev-link">madia@assakinah</a>
+        <a href="https://wa.me/6289529788057" target="_blank" class="dev-link">media@assakinahpantaimentari</a>
       </div>
     </div>
   </footer>
